--- a/css/project.css
+++ b/css/project.css
@@ -1,27 +1,71 @@
-*{
+* {
     padding: 0;
     margin: 0;
     text-decoration: none;
 }
-.header{
+
+.header,
+.navigation {
     width: 100%;
     background-color: black;
     overflow: auto;
 }
-.center{
+
+.center {
     width: 90%;
     margin: 0 auto;
-    overflow: auto;
+    /* overflow: auto; */
 }
-.phone, .email{
-    width:35%;
+
+.phone,
+.email {
+    width: 35%;
     color: white;
     padding: 5px 0;
 }
-.phone{
+
+.phone {
     float: left;
 }
-.email{
+
+.email {
     float: right;
     text-align: right;
+}
+
+.navigation {
+    background-color: aqua;
+}
+
+.logo {
+    float: left;
+    width: 25%;
+
+}
+
+.menu {
+    float: right;
+    width: 50%;
+}
+
+ul {
+   text-align: right;
+    padding: 5px 0;
+}
+
+/* div .section:hover{
+    
+    } */
+ul li {
+    display: inline;
+    padding: 10px;
+}
+
+li a {
+    color: white;
+    text-decoration: none;
+}
+
+li:hover {
+    background: red;
 }
